refactor: 全局视觉重设计 — 书香暖阁主题 + SettingsPage 重构为个人中心
- 配色系统升级：beige+jade → espresso+深林绿+铜红，更有层次和温度
- 字体统一为无衬线 (PingFang SC / Microsoft YaHei)，去除衬线体的过度文艺感
- 全局背景添加径向渐变模拟纸张受光，卡片增加内发光和更深阴影
- 默认头像统一为绿色渐变白色文字，解决灰色文字看不清的问题
- BottomNav 图标从 emoji 改为单字中文（览写聊关报己），加大加粗
- WritePage 精简为纯写作页，移除日记历史列表
- SettingsPage 转型为"个人中心"：日记列表置顶，设置项收入齿轮 modal
- UserProfilePage：主人访问时显示私密日记，右上角齿轮跳转设置
- SettingsPage CSS 硬编码颜色全部替换为全局变量，移除快捷入口卡片